--- a/Vitaminfo2/app/src/main/res/layout/fragment_food.xml
+++ b/Vitaminfo2/app/src/main/res/layout/fragment_food.xml
@@ -29,23 +29,46 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
+
                 <ImageView
-                    android:id="@+id/imageView3"
-                    android:layout_width="162dp"
-                    android:layout_height="wrap_content"
+                    android:id="@+id/imageView"
+                    android:layout_width="80dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:src="@drawable/ic_launcher_foreground" />
+                    android:src="@mipmap/carrots" />
 
                 <TextView
                     android:id="@+id/foodText"
                     android:layout_width="95dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="50dp"
+                    android:gravity="center"
+                    android:layout_weight="5"
+                    android:text="Carrot" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="80dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="foodtext" />
+                    android:src="@mipmap/spinach" />
+                <TextView
+                    android:id="@+id/foodText1"
+                    android:layout_width="95dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="50dp"
+                    android:gravity="center"
+
+                    android:layout_weight="5"
+                    android:text="Spinach" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
