--- a/Vitaminfo2/app/src/main/res/layout/fragment_food.xml
+++ b/Vitaminfo2/app/src/main/res/layout/fragment_food.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".foodActivityFragment"
+    tools:context=".FoodActivityFragment"
     tools:showIn="@layout/activity_food">
 
     <ScrollView
