--- a/Vitaminfo2/app/src/main/res/layout/fragment_userinfo.xml
+++ b/Vitaminfo2/app/src/main/res/layout/fragment_userinfo.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".userInfoFragment"
-    tools:showIn="@layout/activity_user_info">
+    tools:context=".UserinfoFragment"
+    tools:showIn="@layout/activity_userinfo">
 
     <ScrollView
         android:layout_width="match_parent"
