--- a/Vitaminfo2/app/src/main/res/layout/fragment_userinfo.xml
+++ b/Vitaminfo2/app/src/main/res/layout/fragment_userinfo.xml
@@ -56,7 +56,7 @@
                     android:gravity="center"/>
 
                 <EditText
-                    android:id="@+id/textView5"
+                    android:id="@+id/foodName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
