--- a/Vitaminfo2/app/src/main/res/layout/fragment_food_info.xml
+++ b/Vitaminfo2/app/src/main/res/layout/fragment_food_info.xml
@@ -57,6 +57,7 @@
         android:layout_marginStart="48dp"
         android:layout_marginTop="25dp"
         android:text="Calories:"
+        android:textSize="20dp"
         android:textStyle="bold|italic"
         app:layout_constraintStart_toStartOf="@+id/tableLayout"
         app:layout_constraintTop_toBottomOf="@+id/servingSizeText" />
@@ -69,6 +70,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="25dp"
         android:text="Serving Size:"
+        android:textSize="20dp"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toStartOf="@+id/servingSizeAmount"
         app:layout_constraintHorizontal_bias="0.0"
@@ -81,9 +83,10 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="50dp"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="75dp"
         android:layout_marginTop="25dp"
         android:text="(calories amount)"
+        android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/fatAmount"
         app:layout_constraintEnd_toEndOf="@+id/tableLayout"
         app:layout_constraintStart_toEndOf="@+id/totalCaloriesText"
@@ -95,9 +98,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="50dp"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="75dp"
         android:layout_marginTop="25dp"
         android:text="(fat amount)"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="@+id/tableLayout"
         app:layout_constraintStart_toEndOf="@+id/totalFatText"
         app:layout_constraintTop_toBottomOf="@+id/caloriesAmount" />
@@ -107,9 +111,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="50dp"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="75dp"
         android:layout_marginTop="25dp"
         android:text="(sodium amount)"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="@+id/tableLayout"
         app:layout_constraintStart_toEndOf="@+id/sodiumText"
         app:layout_constraintTop_toBottomOf="@+id/fatAmount" />
@@ -119,11 +124,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="50dp"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="35dp"
         android:layout_marginTop="25dp"
         android:text="(carbohydrates amount)"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="@+id/tableLayout"
-        app:layout_constraintHorizontal_bias="0.35"
+        app:layout_constraintHorizontal_bias="0.45"
         app:layout_constraintStart_toEndOf="@+id/carbohydratesText2"
         app:layout_constraintTop_toBottomOf="@+id/sodiumAmount" />
 
@@ -135,6 +141,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="25dp"
         android:text="(serving size amount)"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="@+id/tableLayout"
         app:layout_constraintHorizontal_bias="0.215"
         app:layout_constraintStart_toEndOf="@+id/totalCaloriesText"
@@ -147,6 +154,7 @@
         android:layout_marginStart="48dp"
         android:layout_marginTop="25dp"
         android:text="Total Fat:"
+        android:textSize="20dp"
         android:textStyle="bold|italic"
         app:layout_constraintStart_toStartOf="@+id/tableLayout"
         app:layout_constraintTop_toBottomOf="@+id/totalCaloriesText" />
@@ -158,6 +166,7 @@
         android:layout_marginStart="48dp"
         android:layout_marginTop="25dp"
         android:text="Sodium:"
+        android:textSize="20dp"
         android:textStyle="bold|italic"
         app:layout_constraintStart_toStartOf="@+id/tableLayout"
         app:layout_constraintTop_toBottomOf="@+id/totalFatText" />
@@ -169,6 +178,7 @@
         android:layout_marginStart="48dp"
         android:layout_marginTop="25dp"
         android:text="Protein: "
+        android:textSize="20dp"
         android:textStyle="bold|italic"
         app:layout_constraintStart_toStartOf="@+id/tableLayout"
         app:layout_constraintTop_toBottomOf="@+id/carbohydratesText2" />
@@ -180,6 +190,7 @@
         android:layout_marginStart="48dp"
         android:layout_marginTop="25dp"
         android:text="Carbohydrates: "
+        android:textSize="20dp"
         android:textStyle="bold|italic"
         app:layout_constraintStart_toStartOf="@+id/tableLayout"
         app:layout_constraintTop_toBottomOf="@+id/sodiumText" />
@@ -189,9 +200,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="50dp"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="75dp"
         android:layout_marginTop="25dp"
         android:text="(protein amount)"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="@+id/tableLayout"
         app:layout_constraintStart_toEndOf="@+id/proteinText"
         app:layout_constraintTop_toBottomOf="@+id/carbohydratesAmount" />
