--- a/Vitaminfo2/app/src/main/res/layout/fragment_food_recview_layout.xml
+++ b/Vitaminfo2/app/src/main/res/layout/fragment_food_recview_layout.xml
@@ -10,7 +10,7 @@
     <TextView
         android:id="@+id/listText"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:paddingTop="25dp"
         android:paddingBottom="25dp"
         android:text="Apple MacBook Air Core i5 5th Gen - (8 GB/128 GB SSD/Mac OS Sierra)"
@@ -18,6 +18,8 @@
         android:textColor="#000000"
         android:gravity="center"
         android:textAlignment="center"
+        android:background="#ff69b4"
+
         android:layout_weight="60"
         android:fontFamily="@font/all"/>
 
