--- a/Vitaminfo2/app/src/main/res/layout/fragment_food_recview_layout.xml
+++ b/Vitaminfo2/app/src/main/res/layout/fragment_food_recview_layout.xml
@@ -1,27 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#ff69b4"
-    >
+    android:background="#ff69b4">
+
+    <ImageView
+        android:id="@+id/foodImage"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/listText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/listText"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingTop="25dp"
-        android:paddingBottom="25dp"
+        android:layout_width="323dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_weight="60"
+        android:paddingTop="20dp"
+        android:background="#ff69b4"
+        android:fontFamily="@font/all"
         android:text="Apple MacBook Air Core i5 5th Gen - (8 GB/128 GB SSD/Mac OS Sierra)"
+        android:textAlignment="center"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
         android:textColor="#000000"
-        android:gravity="center"
-        android:textAlignment="center"
-        android:background="#ff69b4"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        android:layout_weight="60"
-        android:fontFamily="@font/all"/>
 
 
 </android.support.constraint.ConstraintLayout>
